cv for primevigilace

--- a/lara_miletic_cv.tex
+++ b/lara_miletic_cv.tex
@@ -5,6 +5,7 @@
 % License : MIT
 %------------------------
 
+
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{latexsym}
@@ -134,7 +135,7 @@
 \begin{center}
     \textbf{\Huge \scshape Lara Miletić} \\ \vspace{1pt}
     \small DOB: 19/09/1994 $|$
-    \small M: +385 98 928 2498 $|${ e-mail: lara.mihic@gmail.com, lara.miletic@halmed.hr}$|$
+    \small M: +385 98 928 2498 $|${ e-mail: lara.mihic@gmail.com}$|$
 
 \end{center}
 %-----------EXPERIENCE-----------
@@ -156,13 +157,13 @@
     
      \resumeSubheading
       {{Pharmacist in public pharmacy}}{September 2018 -- June 2019}
-      {Ljekarne Filipović (Pharmacy store Filipović)}{Zagreb, Croatia}
+      {Ljekarne Filipović (Pharmacy Filipović)}{Zagreb, Croatia}
 %      \resumeItemListStart
 %        \resumeItem{Hybrid powertrain analysis, energy management and control units development}
 %      \resumeItemListEnd
       \resumeSubheading
       {{Pharmacist intern in public pharmacy}}{March 2018 -- August 2018}
-      {Ljekarne Filipović (Pharmacy store Filipović)}{Zagreb, Croatia}
+      {Ljekarne Filipović (Pharmacy Filipović)}{Zagreb, Croatia}
 %      \resumeItemListStart
 %        \resumeItem{Hybrid powertrain analysis, energy management and control units development}
 %      \resumeItemListEnd
@@ -171,25 +172,28 @@
 %-----------EDUCATION-----------
 \section{{Education}}
   \resumeSubHeadingListStart
+      \resumeSubheading
+      {{London School of Hygiene and Tropical Medicine}}{University of London, United Kingdom}
+      {Master of Epidemiology (Distance Learning)}{October 2022 -- Present}
     \resumeSubheading
-      {{Faculty of Pharmacy and Biochemistry}}{Zagreb, Croatia}
+      {{Faculty of Pharmacy and Biochemistry}}{University of Zagreb, Croatia}
       {Master of Pharmacy}{September 2013 -- September 2018}
   \resumeSubHeadingListEnd
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{{Competences}} 
-Experienced pharmacovigilance assessor working for the National Competent Authority (NCA) responsible for human medicines in Croatia. 
-Daily work activities include in particular the following:
+Experienced pharmacovigilance assessor responsible for a variety of pharmacovigilance procedures, in particular:
 \begin{itemize}
-\item Causality assessment of adverse drug reactions (ADRs),
-\item Safety signal detection and assessment,
-\item Assessment of PSURs (Periodic safety update reports) in PSUSA procedures (PSUR single assessment procedures),
-\item Assessment of variations in the terms of marketing authorisation granted by one of the following procedures: National Procedure (NP), MRP/DCP (Mutual Recognition Procedure/Decentralised Procedure) and CP (Centralised Procedure),
-\item Assessment of risk management plan (RMP),
-\item Assessment of post-authorisation safety studies (PASS) with involvement of the European Medicines Agency's Pharmacovigilance Risk Assessment Committee (PRAC),
-\item Approval of direct healthcare professional communication (DHPC),
-\item Team member of assessors in referral procedures, i.e. procedures used to resolve issues such as concerns over the safety or benefit-risk balance of a medicine or a class of medicines,
-\item Team member of the Coordination work package in the European Commission co-founded project covering the safety assessment in clinical trials.
+\item Assessment of individual case safety reports (ICSRs)
+\item Safety signal detection, validation and evaluation
+\item Assessment of Periodic safety update reports (PSURs) in PSUR single assessment (PSUSA) procedures
+\item Assessment in safety-related referral procedures, i.e. procedures on EU level with aim of resolving concerns over the safety or benefit-risk balance of a medicine or a class of medicines
+\item Assessment of variations in the terms of marketing authorization granted by one of the following procedures: National Procedure (NP), Mutual Recognition Procedure/Decentralised Procedure (MRP/DCP) and Centralised Procedure (CP)
+\item Assessment of risk management plan (RMP)
+\item Assessment of study protocols for post-authorization safety studies (PASS) with involvement of the European Medicines Agency's Pharmacovigilance Risk Assessment Committee (PRAC)
+\item Assessment of study protocols, informed consent form (ICF) and other documentation required for national approval of non-interventional studies initiated by marketing authorization holders (MAHs)
+\item Coordination and management of an EU4Health project Safety assessment cooperation and facilitated conduct of clinical trials (SAFE CT)
+\item Approval of direct healthcare professional communication (DHPC)
 \end{itemize}
 
 \section{{Soft skills}}
@@ -199,7 +203,7 @@ Daily work activities include in particular the following:
 
 \section{{Personal interests}}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item Family and Friends, Hiking, Nature, Traveling}
+    \small{\item Hiking, Nature, Traveling}
  \end{itemize}
 %-------------------------------------------
 \end{document}
