Primevigilance resume update

--- a/lara_miletic_cv.tex
+++ b/lara_miletic_cv.tex
@@ -174,7 +174,7 @@
   \resumeSubHeadingListStart
       \resumeSubheading
       {{London School of Hygiene and Tropical Medicine}}{University of London, United Kingdom}
-      {Master of Epidemiology (Distance Learning)}{October 2022 -- Present}
+      {Master of Epidemiology}{October 2022 -- Present}
     \resumeSubheading
       {{Faculty of Pharmacy and Biochemistry}}{University of Zagreb, Croatia}
       {Master of Pharmacy}{September 2013 -- September 2018}
@@ -182,18 +182,24 @@
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{{Competences}} 
-Experienced pharmacovigilance assessor responsible for a variety of pharmacovigilance procedures, in particular:
+Pharmacovigilance expert specialised in:
 \begin{itemize}
 \item Assessment of individual case safety reports (ICSRs)
 \item Safety signal detection, validation and evaluation
 \item Assessment of Periodic safety update reports (PSURs) in PSUR single assessment (PSUSA) procedures
-\item Assessment in safety-related referral procedures, i.e. procedures on EU level with aim of resolving concerns over the safety or benefit-risk balance of a medicine or a class of medicines
+\item Assessment in safety-related referral procedures on EU level
 \item Assessment of variations in the terms of marketing authorization granted by one of the following procedures: National Procedure (NP), Mutual Recognition Procedure/Decentralised Procedure (MRP/DCP) and Centralised Procedure (CP)
 \item Assessment of risk management plan (RMP)
 \item Assessment of study protocols for post-authorization safety studies (PASS) with involvement of the European Medicines Agency's Pharmacovigilance Risk Assessment Committee (PRAC)
 \item Assessment of study protocols, informed consent form (ICF) and other documentation required for national approval of non-interventional studies initiated by marketing authorization holders (MAHs)
-\item Coordination and management of an EU4Health project Safety assessment cooperation and facilitated conduct of clinical trials (SAFE CT)
-\item Approval of direct healthcare professional communication (DHPC)
+\end{itemize}
+
+Proficient project manager in large-scale EU co-founded project responsible for:
+\begin{itemize}
+\item In-house coordination of project team 
+\item Overall implementation of project aim, its milestones and deliverables
+\item Financial management which includes budget planning, execution and reporting
+\item Correspondence with partners and Granting Authority
 \end{itemize}
 
 \section{{Soft skills}}
